Added example ressources
Former-commit-id: 1b0066af8e86ae680c26051e9c4edd15a5c21327

--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -17,8 +17,9 @@
    "source": [
     "GALEX_FOV_DIAM = 1.1\n",
     "exp_mean_min = 750\n",
-    "nr_vis_min = 5 # Including 4 visits >=\n",
-    "fout_name_BASE = \"field_ids_expmin\"+str(exp_mean_min)+\"_vismin\"+str(nr_vis_min)  # No file written for \"none\""
+    "nr_vis_min = 5 #  >=\n",
+    "fout_name = \"none\"\n",
+    "fout_name = \"field_ids_expmin\"+str(exp_mean_min)+\"_vismin\"+str(nr_vis_min)+\".yaml\"  # No file written for \"none\""
    ]
   },
   {
@@ -57,7 +58,7 @@
      "data": {
       "text/html": [
        "<div><i>Table masked=True length=2</i>\n",
-       "<table id=\"table140184528114288\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139858546326496\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>str7</th><th>str5</th><th>str3</th><th>str5</th><th>str3</th><th>str3</th><th>str2</th><th>str16</th><th>str1</th><th>str19</th><th>float64</th><th>float64</th><th>str5</th><th>str1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>str1</th><th>str3</th><th>int64</th><th>str43</th><th>str130</th><th>str124</th><th>str6</th><th>bool</th><th>float64</th><th>str4</th><th>str4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -66,11 +67,11 @@
       ],
       "text/plain": [
        "<Table masked=True length=2>\n",
-       "intentType obs_collection provenance_name ...  srcDen obsid objID\n",
-       "   str7         str5            str3      ... float64  str4  str4\n",
-       "---------- -------------- --------------- ... ------- ----- -----\n",
-       "   science          GALEX             DIS ...  5885.0  2047  3659\n",
-       "   science          GALEX             DIS ...  5885.0  2048  3661"
+       "intentType obs_collection provenance_name instrument_name project filters ... dataRights mtFlag  srcDen obsid objID\n",
+       "   str7         str5            str3            str5        str3    str3  ...    str6     bool  float64  str4  str4\n",
+       "---------- -------------- --------------- --------------- ------- ------- ... ---------- ------ ------- ----- -----\n",
+       "   science          GALEX             DIS           GALEX     DIS     NUV ...     PUBLIC     --  5885.0  2047  3659\n",
+       "   science          GALEX             DIS           GALEX     DIS     NUV ...     PUBLIC     --  5885.0  2048  3661"
       ]
      },
      "metadata": {},
@@ -109,7 +110,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table140183628116752\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139859561149632\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -118,11 +119,11 @@
       ],
       "text/plain": [
        "<Table length=2>\n",
-       "   ParentImgRunID     RATileCenter   ...   maxPhotoObsDate  \n",
-       "       int64            float64      ...       bytes22      \n",
-       "------------------- ---------------- ... -------------------\n",
-       "2391589660720627712 210.542232477159 ... 6/7/2003 5:11:33 AM\n",
-       "2391624845092716544 201.528614022379 ... 6/7/2003 6:56:39 AM"
+       "   ParentImgRunID     RATileCenter     DECTileCenter   nexptime_mean fexptime_mean        gall        ... nexptime_sum fexptime_sum nPhotoVisits survey   minPhotoObsDate     maxPhotoObsDate  \n",
+       "       int64            float64           float64         float64       float64         float64       ...   float64      float64       int64     bytes3       bytes22             bytes22      \n",
+       "------------------- ---------------- ----------------- ------------- ------------- ------------------ ... ------------ ------------ ------------ ------ ------------------- -------------------\n",
+       "2391589660720627712 210.542232477159 -32.6804067553693         544.0         544.0 319.74270865062874 ...        544.0        544.0            1    NGS 6/7/2003 5:02:29 AM 6/7/2003 5:11:33 AM\n",
+       "2391624845092716544 201.528614022379 -42.9957260941383         937.0         937.0 309.64494588030084 ...        937.0        937.0            1    NGS 6/7/2003 6:41:02 AM 6/7/2003 6:56:39 AM"
       ]
      },
      "metadata": {},
@@ -168,7 +169,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table140183520680864-554675\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139858546568656-155515\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th></tr></thead>\n",
        "<tr><td>0</td><td>35.5606252902383</td><td>-3.14743664508478</td><td>DIS</td><td>1345.25</td><td>0.0</td><td>2592597841327161344</td><td>2592597978464124928</td><td>63341</td><td>8150</td><td>-999</td><td>visitI</td><td>9832</td><td>1</td><td>12/18/2009 9:09:30 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>16</td><td>-999</td><td>12/18/2009 9:09:30 AM</td><td>12/18/2009 9:31:55 AM</td><td>null</td><td>null</td><td>55183.38159722222</td><td>169.00600771825543</td><td>-57.654641102907654</td></tr>\n",
        "<tr><td>1</td><td>35.572681398541</td><td>-3.16989331767195</td><td>DIS</td><td>1199.35</td><td>0.0</td><td>2592597841360715776</td><td>2592597978464124928</td><td>44436</td><td>8150</td><td>-999</td><td>visitI</td><td>9249</td><td>1</td><td>12/20/2009 8:50:42 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>17</td><td>-999</td><td>12/20/2009 8:50:42 AM</td><td>12/20/2009 9:10:41 AM</td><td>null</td><td>null</td><td>55185.36854166666</td><td>169.05021602003802</td><td>-57.66412379765083</td></tr>\n",
@@ -195,14 +196,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table140183520680864-554675').dataTable()\");\n",
+       "    console.log(\"$('#table139858546568656-155515').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table140183520680864-554675').dataTable({\n",
+       "    $('#table139858546568656-155515').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -316,11 +317,7 @@
     "sel_fd_exp = (tt_fd[sel_fd][\"nPhotoVisits\"]*tt_fd[sel_fd][\"nexptime_mean\"]).sum()\n",
     "print(f\"Selected number of fields: {sel_fd.sum()} ( {round(sel_fd.sum()/42.,2)} times TDS )\")\n",
     "print(f\"Selected number of visits: {tt_fd[sel_fd]['nPhotoVisits'].sum()} ( {round(tt_fd[sel_fd]['nPhotoVisits'].sum()/tds_nr_vis,2)} times TDS )\")\n",
-    "print(f\"Total selected exposure  : {round(sel_fd_exp/1e6,2)} Ms ( {round(sel_fd_exp/tds_exp,2)} times TDS )\")\n",
-    "\n",
-    "#Write out file_id list\n",
-    "if fout_name != \"none\":\n",
-    "    tt_fd[sel_fd].write(fout_name, format= \"ascii.rst\", overwrite=True)"
+    "print(f\"Total selected exposure  : {round(sel_fd_exp/1e6,2)} Ms ( {round(sel_fd_exp/tds_exp,2)} times TDS )\")"
    ]
   },
   {
@@ -341,17 +338,15 @@
    "outputs": [],
    "source": [
     "if fout_name != \"none\":\n",
-    "    ff_nuv = open(fout_name_base+\".yaml\", \"w\")\n",
+    "    ff = open(fout_name, \"w\")\n",
     "    ll_cols = ['RATileCenter', 'DECTileCenter', 'nexptime_sum', 'fexptime_sum', 'nPhotoVisits', 'survey']\n",
     "    wstr = \"#\"\n",
-    "    for col in ll_cols:\n",
-    "        wstr += \" \" + str(col) \n",
+    "    for col in ll_cols: wstr += \" \" + str(col) \n",
     "    ff.write(wstr+\"\\n\")\n",
     "    for row in tt_fd[sel_fd]:\n",
     "        ff.write('- '+ str(row[\"ParentImgRunID\"]))\n",
     "        wstr = \" #\"\n",
-    "        for col in ll_cols:\n",
-    "            wstr += \" \" + str(row[col])\n",
+    "        for col in ll_cols:  wstr += \" \" + str(row[col])\n",
     "        ff.write(wstr+\"\\n\")\n",
     "    ff.close()"
    ]
@@ -366,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "fe1c16f5-bcdd-4d66-b44d-0570dee41150",
    "metadata": {},
    "outputs": [
@@ -376,14 +371,14 @@
        "Text(0.5, 0, 'Mean exposure time[s]')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eae2fc7fd3aa466f99ee755d2a1b9479",
+       "model_id": "be06c64c941f46ffbb85d6fc273adc34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "6c65650c-fa84-4e13-8c27-21257342cb18",
    "metadata": {},
    "outputs": [
@@ -444,7 +439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3126bf90b71f490f998ab56e3b0ed34f",
+       "model_id": "c6cf5ef7b5e544c4b2444bc6acf0010c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc7fecac9ac04d729922f97cf068a210",
+       "model_id": "feb902dc856b4a4f9e254ea26d484abd",
        "version_major": 2,
        "version_minor": 0
       },
