--- a/vasca/examples/vasca_pipe_diagnostics.ipynb
+++ b/vasca/examples/vasca_pipe_diagnostics.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3b4f7027-9a5a-42d5-88ad-695d343c0f20",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=14</i>\n",
-       "<table id=\"table140205033262960\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140112240054944\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>field_name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes8</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -84,10 +84,58 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/html": [
+       "<div><i>Table length=42808</i>\n",
+       "<table id=\"table140112240009968\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_nxv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>assoc_id</th><th>assoc_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>assoc_ffactor</th><th>assoc_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th></th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int32</th><th>int32</th><th>int32</th></tr></thead>\n",
+       "<tr><td>-1</td><td>22 .. 4</td><td>242.25837411483425</td><td>54.34512960701703</td><td>0.16009803</td><td>-5.545325e-12</td><td>0.7391224</td><td>0.064598426</td><td>0.9571404</td><td>480</td><td>0.14931233</td><td>1 .. 2</td><td>False</td><td>3.1312551 .. 2.27481</td><td>0.13938813 .. 0.3134234</td><td>-0.0031849085 .. 0.14062682</td><td>0.43505177 .. 1.3323537</td><td>0.71286696 .. 0.08772357</td><td>0.80813944 .. 2.1832278</td><td>0.8801017 .. 1.0995015</td><td>-2.2566721 .. 0.53117883</td><td>-1</td><td>0</td><td>5</td></tr>\n",
+       "<tr><td>-1</td><td>21 .. 5</td><td>242.07730915788656</td><td>54.17925461911291</td><td>0.1645494</td><td>-2.981787e-12</td><td>1.1546035</td><td>0.000507761</td><td>1.3589226</td><td>635</td><td>0.5533157</td><td>1 .. 2</td><td>False</td><td>4.1245213 .. 2.6202064</td><td>0.1719268 .. 0.2782085</td><td>0.017095651 .. -0.034082353</td><td>0.99892664 .. 0.26029953</td><td>0.18435213 .. 0.47775438</td><td>1.273061 .. 0.87520385</td><td>0.87995076 .. 1.1733084</td><td>-2.557791 .. 1.0707903</td><td>-1</td><td>1</td><td>5</td></tr>\n",
+       "<tr><td>-1</td><td>2 .. 4</td><td>241.68792030981004</td><td>54.33245967877683</td><td>0.34057513</td><td>-3.4877773e-12</td><td>1.4282845</td><td>0.005084476</td><td>1.8827313</td><td>1031</td><td>0.24928904</td><td>1 .. 2</td><td>False</td><td>6.9154534 .. 5.2511096</td><td>0.6084387 .. 0.5194622</td><td>-0.014885484 .. -0.0044614566</td><td>0.06321326 .. 1.0431541</td><td>0.7751996 .. 0.4355548</td><td>0.08155612 .. 0.90920496</td><td>0.87951314 .. 0.8120792</td><td>-1.5094444 .. -1.9811162</td><td>-1</td><td>2</td><td>5</td></tr>\n",
+       "<tr><td>-1</td><td>19 .. 7</td><td>241.6477279413547</td><td>54.31792090337376</td><td>0.16230574</td><td>-2.3082497e-12</td><td>1.3967035</td><td>1.1426469e-07</td><td>1.9217349</td><td>1070</td><td>0.5211947</td><td>1 .. 2</td><td>False</td><td>4.258515 .. 2.9802434</td><td>0.18272357 .. 0.2555413</td><td>-0.012931989 .. 0.0036309178</td><td>0.49602237 .. 0.66807634</td><td>0.7666645 .. 0.52414304</td><td>0.7449991 .. 0.8591001</td><td>0.73479146 .. 0.83702695</td><td>-6.2331038 .. -1.4347591</td><td>-1</td><td>3</td><td>5</td></tr>\n",
+       "<tr><td>-1</td><td>30 .. 4</td><td>241.63459942556776</td><td>54.164383181187944</td><td>0.14472549</td><td>7.2661376e-13</td><td>1.3041806</td><td>6.821698e-05</td><td>1.5884225</td><td>1083</td><td>0.21805614</td><td>1 .. 2</td><td>False</td><td>3.7217183 .. 2.8132963</td><td>0.1316275 .. 0.3122767</td><td>0.005373834 .. -0.034798663</td><td>0.6396849 .. 0.29720908</td><td>0.36615312 .. 0.50059736</td><td>1.0684327 .. 0.78759927</td><td>0.76789594 .. 1.0993376</td><td>-5.6510067 .. 0.63618606</td><td>-1</td><td>4</td><td>5</td></tr>\n",
+       "<tr><td>-1</td><td>16 .. 4</td><td>241.3763055585869</td><td>54.86720756939601</td><td>0.19534786</td><td>-4.500237e-12</td><td>0.8452902</td><td>0.062360726</td><td>0.98306805</td><td>1236</td><td>0.26923802</td><td>1 .. 2</td><td>False</td><td>3.444413 .. 3.055333</td><td>0.18734655 .. 0.3057873</td><td>-0.030591467 .. -0.018138409</td><td>0.23535913 .. 0.23035622</td><td>0.98453027 .. 0.51838136</td><td>0.37917736 .. 0.7565133</td><td>0.77686447 .. 1.0997623</td><td>-4.2357154 .. 0.7008349</td><td>-1</td><td>5</td><td>5</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>-1</td><td>5 .. -1</td><td>240.32572837599318</td><td>55.30370888990184</td><td>0.41705883</td><td>1.4153909e-11</td><td>2.4103982</td><td>0.0039655874</td><td>2.2245796</td><td>-1</td><td>-1.0</td><td>1 .. -1</td><td>False</td><td>2.9258533 .. -1.0</td><td>0.33081952 .. -1.0</td><td>-0.055473916 .. -100.0</td><td>0.115243234 .. -1.0</td><td>0.95266443 .. -1.0</td><td>0.17227879 .. -1.0</td><td>-100.0 .. -100.0</td><td>-10000.0 .. -10000.0</td><td>-1</td><td>42802</td><td>1</td></tr>\n",
+       "<tr><td>-1</td><td>1 .. -1</td><td>240.32490884476883</td><td>55.299050515477475</td><td>0.9624223</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1 .. -1</td><td>False</td><td>2.1798005 .. -1.0</td><td>0.61295164 .. -1.0</td><td>-100.0 .. -100.0</td><td>-100.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-100.0 .. -100.0</td><td>-10000.0 .. -10000.0</td><td>-1</td><td>42803</td><td>1</td></tr>\n",
+       "<tr><td>-1</td><td>-1 .. 1</td><td>240.31958201782973</td><td>55.50639739503482</td><td>0.7444322</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1 .. 2</td><td>False</td><td>-1.0 .. 12.018576</td><td>-1.0 .. 1.4333363</td><td>-100.0 .. -100.0</td><td>-1.0 .. -100.0</td><td>-1.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-100.0 .. -100.0</td><td>-10000.0 .. -10000.0</td><td>-1</td><td>42804</td><td>1</td></tr>\n",
+       "<tr><td>-1</td><td>1 .. -1</td><td>240.31779816823231</td><td>55.3028622159417</td><td>1.6243336</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1 .. -1</td><td>False</td><td>2.513889 .. -1.0</td><td>0.66450626 .. -1.0</td><td>-100.0 .. -100.0</td><td>-100.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-100.0 .. -100.0</td><td>-10000.0 .. -10000.0</td><td>-1</td><td>42805</td><td>1</td></tr>\n",
+       "<tr><td>-1</td><td>-1 .. 1</td><td>240.3087130905851</td><td>55.274586923346675</td><td>1.253594</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1 .. 2</td><td>False</td><td>-1.0 .. 3.0933387</td><td>-1.0 .. 0.8240468</td><td>-100.0 .. -100.0</td><td>-1.0 .. -100.0</td><td>-1.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-100.0 .. -100.0</td><td>-10000.0 .. -10000.0</td><td>-1</td><td>42806</td><td>1</td></tr>\n",
+       "<tr><td>-1</td><td>-1 .. 1</td><td>240.29259246351396</td><td>55.41199953986505</td><td>0.79909253</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1 .. 2</td><td>False</td><td>-1.0 .. 5.661974</td><td>-1.0 .. 1.0084081</td><td>-100.0 .. -100.0</td><td>-1.0 .. -100.0</td><td>-1.0 .. -1.0</td><td>-1.0 .. -1.0</td><td>-100.0 .. -100.0</td><td>-10000.0 .. -10000.0</td><td>-1</td><td>42807</td><td>1</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=42808>\n",
+       "fd_src_id  nr_det          ra         ... rg_fd_id rg_src_id nr_fd_srcs\n",
+       "                          deg         ...                              \n",
+       "  int32   int32[2]      float64       ...  int32     int32     int32   \n",
+       "--------- -------- ------------------ ... -------- --------- ----------\n",
+       "       -1  22 .. 4 242.25837411483425 ...       -1         0          5\n",
+       "       -1  21 .. 5 242.07730915788656 ...       -1         1          5\n",
+       "       -1   2 .. 4 241.68792030981004 ...       -1         2          5\n",
+       "       -1  19 .. 7  241.6477279413547 ...       -1         3          5\n",
+       "       -1  30 .. 4 241.63459942556776 ...       -1         4          5\n",
+       "       -1  16 .. 4  241.3763055585869 ...       -1         5          5\n",
+       "      ...      ...                ... ...      ...       ...        ...\n",
+       "       -1  5 .. -1 240.32572837599318 ...       -1     42802          1\n",
+       "       -1  1 .. -1 240.32490884476883 ...       -1     42803          1\n",
+       "       -1  -1 .. 1 240.31958201782973 ...       -1     42804          1\n",
+       "       -1  1 .. -1 240.31779816823231 ...       -1     42805          1\n",
+       "       -1  -1 .. 1  240.3087130905851 ...       -1     42806          1\n",
+       "       -1  -1 .. 1 240.29259246351396 ...       -1     42807          1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 42745 / 271\n"
+      "Nr sources: 42808 / 274\n",
+      "Nr detections: 291366 / 5252\n"
      ]
     }
    ],
@@ -114,7 +162,9 @@
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
     "display(rg.tt_fields)\n",
-    "print(\"Nr sources:\",len(rg.tt_sources),\"/\",rg.tt_sources[\"sel\"].sum())"
+    "sel_var = rg.tt_sources[\"sel\"]\n",
+    "print(\"Nr sources:\",len(rg.tt_sources),\"/\",rg.tt_sources[\"sel\"].sum())\n",
+    "print(\"Nr detections:\",len(rg.tt_detections),\"/\",rg.tt_sources[sel_var][\"nr_det\"].sum())"
    ]
   },
   {
