Use ressources folder
Former-commit-id: 0c9b1822ad08d10f8c23e08c037e1cdc74d4c6f2

--- a/vasca/examples/query_GALEX.ipynb
+++ b/vasca/examples/query_GALEX.ipynb
@@ -19,7 +19,7 @@
     "exp_mean_min = 750\n",
     "nr_vis_min = 5 #  >=\n",
     "fout_name = \"none\"\n",
-    "fout_name = \"field_ids_expmin\"+str(exp_mean_min)+\"_vismin\"+str(nr_vis_min)+\".yaml\"  # No file written for \"none\""
+    "fout_name = \"./ressources/GALEX_field_id_lists/field_ids_expmin\"+str(exp_mean_min)+\"_vismin\"+str(nr_vis_min)+\".yaml\"  # No file written for \"none\""
    ]
   },
   {
@@ -58,7 +58,7 @@
      "data": {
       "text/html": [
        "<div><i>Table masked=True length=2</i>\n",
-       "<table id=\"table139858546326496\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140249490590688\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>intentType</th><th>obs_collection</th><th>provenance_name</th><th>instrument_name</th><th>project</th><th>filters</th><th>wavelength_region</th><th>target_name</th><th>target_classification</th><th>obs_id</th><th>s_ra</th><th>s_dec</th><th>dataproduct_type</th><th>proposal_pi</th><th>calib_level</th><th>t_min</th><th>t_max</th><th>t_exptime</th><th>em_min</th><th>em_max</th><th>obs_title</th><th>t_obs_release</th><th>proposal_id</th><th>proposal_type</th><th>sequence_number</th><th>s_region</th><th>jpegURL</th><th>dataURL</th><th>dataRights</th><th>mtFlag</th><th>srcDen</th><th>obsid</th><th>objID</th></tr></thead>\n",
        "<thead><tr><th>str7</th><th>str5</th><th>str3</th><th>str5</th><th>str3</th><th>str3</th><th>str2</th><th>str16</th><th>str1</th><th>str19</th><th>float64</th><th>float64</th><th>str5</th><th>str1</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str1</th><th>float64</th><th>str1</th><th>str3</th><th>int64</th><th>str43</th><th>str130</th><th>str124</th><th>str6</th><th>bool</th><th>float64</th><th>str4</th><th>str4</th></tr></thead>\n",
        "<tr><td>science</td><td>GALEX</td><td>DIS</td><td>GALEX</td><td>DIS</td><td>NUV</td><td>UV</td><td>PS_XMMLSS_MOS00</td><td>--</td><td>2592597978464124928</td><td>35.578863351058885</td><td>-3.14176421214975</td><td>image</td><td>--</td><td>2</td><td>54791.262777777774</td><td>55512.31023148148</td><td>40457.25</td><td>169300000000.0</td><td>300700000000.0</td><td>--</td><td>55953.94460633</td><td>--</td><td>DIS</td><td>--</td><td>CIRCLE ICRS  35.57886335  -3.14176421 0.625</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/qa/PS_XMMLSS_MOS00-xd-int_2color.jpg</td><td>http://galex.stsci.edu/data/GR6/pipe/01-vsn/08150-PS_XMMLSS_MOS00/d/01-main/0007-img/07-try/PS_XMMLSS_MOS00-nd-exp.fits.gz</td><td>PUBLIC</td><td>--</td><td>5885.0</td><td>2047</td><td>3659</td></tr>\n",
@@ -67,11 +67,11 @@
       ],
       "text/plain": [
        "<Table masked=True length=2>\n",
-       "intentType obs_collection provenance_name instrument_name project filters ... dataRights mtFlag  srcDen obsid objID\n",
-       "   str7         str5            str3            str5        str3    str3  ...    str6     bool  float64  str4  str4\n",
-       "---------- -------------- --------------- --------------- ------- ------- ... ---------- ------ ------- ----- -----\n",
-       "   science          GALEX             DIS           GALEX     DIS     NUV ...     PUBLIC     --  5885.0  2047  3659\n",
-       "   science          GALEX             DIS           GALEX     DIS     NUV ...     PUBLIC     --  5885.0  2048  3661"
+       "intentType obs_collection provenance_name ...  srcDen obsid objID\n",
+       "   str7         str5            str3      ... float64  str4  str4\n",
+       "---------- -------------- --------------- ... ------- ----- -----\n",
+       "   science          GALEX             DIS ...  5885.0  2047  3659\n",
+       "   science          GALEX             DIS ...  5885.0  2048  3661"
       ]
      },
      "metadata": {},
@@ -80,7 +80,7 @@
    ],
    "source": [
     "#Get TDS field info\n",
-    "tt_tds = Table.read(\"./TDS-ApJ_766_60/tds_fields_table2.ecsv\")\n",
+    "tt_tds = Table.read(\"./ressources/TDS-ApJ_766_60/tds_fields_table2.ecsv\")\n",
     "dd_query = {\"instrument_name\":\"GALEX\",\n",
     "             \"dataproduct_type\":\"image\",\n",
     "             \"dataRights\":\"PUBLIC\",\n",
@@ -110,7 +110,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=2</i>\n",
-       "<table id=\"table139859561149632\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140249490601584\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ParentImgRunID</th><th>RATileCenter</th><th>DECTileCenter</th><th>nexptime_mean</th><th>fexptime_mean</th><th>gall</th><th>galb</th><th>nexptime_sum</th><th>fexptime_sum</th><th>nPhotoVisits</th><th>survey</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>bytes3</th><th>bytes22</th><th>bytes22</th></tr></thead>\n",
        "<tr><td>2391589660720627712</td><td>210.542232477159</td><td>-32.6804067553693</td><td>544.0</td><td>544.0</td><td>319.74270865062874</td><td>27.871918173555255</td><td>544.0</td><td>544.0</td><td>1</td><td>NGS</td><td>6/7/2003 5:02:29 AM</td><td>6/7/2003 5:11:33 AM</td></tr>\n",
@@ -119,11 +119,11 @@
       ],
       "text/plain": [
        "<Table length=2>\n",
-       "   ParentImgRunID     RATileCenter     DECTileCenter   nexptime_mean fexptime_mean        gall        ... nexptime_sum fexptime_sum nPhotoVisits survey   minPhotoObsDate     maxPhotoObsDate  \n",
-       "       int64            float64           float64         float64       float64         float64       ...   float64      float64       int64     bytes3       bytes22             bytes22      \n",
-       "------------------- ---------------- ----------------- ------------- ------------- ------------------ ... ------------ ------------ ------------ ------ ------------------- -------------------\n",
-       "2391589660720627712 210.542232477159 -32.6804067553693         544.0         544.0 319.74270865062874 ...        544.0        544.0            1    NGS 6/7/2003 5:02:29 AM 6/7/2003 5:11:33 AM\n",
-       "2391624845092716544 201.528614022379 -42.9957260941383         937.0         937.0 309.64494588030084 ...        937.0        937.0            1    NGS 6/7/2003 6:41:02 AM 6/7/2003 6:56:39 AM"
+       "   ParentImgRunID     RATileCenter   ...   maxPhotoObsDate  \n",
+       "       int64            float64      ...       bytes22      \n",
+       "------------------- ---------------- ... -------------------\n",
+       "2391589660720627712 210.542232477159 ... 6/7/2003 5:11:33 AM\n",
+       "2391624845092716544 201.528614022379 ... 6/7/2003 6:56:39 AM"
       ]
      },
      "metadata": {},
@@ -169,7 +169,7 @@
      "data": {
       "text/html": [
        "<i>Table length=2</i>\n",
-       "<table id=\"table139858546568656-155515\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140248476307408-229769\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>idx</th><th>RATileCenter</th><th>DECTileCenter</th><th>survey</th><th>nexptime</th><th>fexptime</th><th>imgRunID</th><th>ParentImgRunID</th><th>joinID</th><th>tileNum</th><th>specTileNum</th><th>source</th><th>nPhotoObjects</th><th>nPhotoVisits</th><th>PhotoObsDate</th><th>spectra</th><th>nSpectra</th><th>nSpectraVisits</th><th>SpecObsDate</th><th>visitNum</th><th>subvis</th><th>minPhotoObsDate</th><th>maxPhotoObsDate</th><th>minSpecObsDate</th><th>maxSpecObsDate</th><th>PhotoObsDate_MJD</th><th>gall</th><th>galb</th></tr></thead>\n",
        "<tr><td>0</td><td>35.5606252902383</td><td>-3.14743664508478</td><td>DIS</td><td>1345.25</td><td>0.0</td><td>2592597841327161344</td><td>2592597978464124928</td><td>63341</td><td>8150</td><td>-999</td><td>visitI</td><td>9832</td><td>1</td><td>12/18/2009 9:09:30 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>16</td><td>-999</td><td>12/18/2009 9:09:30 AM</td><td>12/18/2009 9:31:55 AM</td><td>null</td><td>null</td><td>55183.38159722222</td><td>169.00600771825543</td><td>-57.654641102907654</td></tr>\n",
        "<tr><td>1</td><td>35.572681398541</td><td>-3.16989331767195</td><td>DIS</td><td>1199.35</td><td>0.0</td><td>2592597841360715776</td><td>2592597978464124928</td><td>44436</td><td>8150</td><td>-999</td><td>visitI</td><td>9249</td><td>1</td><td>12/20/2009 8:50:42 AM</td><td>False</td><td>null</td><td>null</td><td>null</td><td>17</td><td>-999</td><td>12/20/2009 8:50:42 AM</td><td>12/20/2009 9:10:41 AM</td><td>null</td><td>null</td><td>55185.36854166666</td><td>169.05021602003802</td><td>-57.66412379765083</td></tr>\n",
@@ -196,14 +196,14 @@
        "    datatables: 'https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min'\n",
        "}});\n",
        "require([\"datatables\"], function(){\n",
-       "    console.log(\"$('#table139858546568656-155515').dataTable()\");\n",
+       "    console.log(\"$('#table140248476307408-229769').dataTable()\");\n",
        "    \n",
        "jQuery.extend( jQuery.fn.dataTableExt.oSort, {\n",
        "    \"optionalnum-asc\": astropy_sort_num,\n",
        "    \"optionalnum-desc\": function (a,b) { return -astropy_sort_num(a, b); }\n",
        "});\n",
        "\n",
-       "    $('#table139858546568656-155515').dataTable({\n",
+       "    $('#table140248476307408-229769').dataTable({\n",
        "        order: [],\n",
        "        pageLength: 50,\n",
        "        lengthMenu: [[10, 25, 50, 100, 500, 1000, -1], [10, 25, 50, 100, 500, 1000, 'All']],\n",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "fe1c16f5-bcdd-4d66-b44d-0570dee41150",
    "metadata": {},
    "outputs": [
@@ -371,14 +371,14 @@
        "Text(0.5, 0, 'Mean exposure time[s]')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be06c64c941f46ffbb85d6fc273adc34",
+       "model_id": "ed4f436d290e4ca6a63cac05b86cc077",
        "version_major": 2,
        "version_minor": 0
       },
@@ -439,7 +439,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6cf5ef7b5e544c4b2444bc6acf0010c",
+       "model_id": "6d947f8c44f443c6aa0b23d2231e1897",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +464,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "feb902dc856b4a4f9e254ea26d484abd",
+       "model_id": "162048e9cb92429c9f7d4730d44dfeb7",
        "version_major": 2,
        "version_minor": 0
       },
