--- a/vasca/examples/compare_TDS_VASCA.ipynb
+++ b/vasca/examples/compare_TDS_VASCA.ipynb
@@ -2237,7 +2237,7 @@
     "# Load catalog data\n",
     "\n",
     "# TDS\n",
-    "tds_catalog = \"./TDS-ApJ_766_60/table4.fit\"\n",
+    "tds_catalog = \"./ressources/TDS-ApJ_766_60/table4.fit\"\n",
     "tt_tds = Table.read(tds_catalog, hdu=\"J_ApJ_766_60_table4\")\n",
     "\n",
     "df_tds = tt_tds.to_pandas()\n",
@@ -4098,7 +4098,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
